--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.12.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "valtio": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
